ansible/roles/ocp4-workload-camelk-crw/files/prometheus/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-prom
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prom
