ansible/roles/ocp4-workload-camelk-crw/files/prometheus/route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus-prom
spec:
  to:
    kind: Service
    name: prometheus-prom
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
